--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "chal",
+  "name": "blog-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "ddd",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "dd",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.1",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.8",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "express-validator": "^6.14.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.2",
-    "nodemon": "^2.0.20",
-    "session": "^0.1.0",
-    "validator": "^13.7.0"
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "hbs": "^4.2.0",
+    "method-override": "^3.0.0",
+    "mongodb": "^3.6.2",
+    "mongoose": "^5.10.9",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1"
   },
-  "devDependencies": {}
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/OlhaGr/ImpWeekMM.git"
+  },
+  "bugs": {
+    "url": "https://github.com/OlhaGr/ImpWeekMM.git"
+  },
+  "homepage": "https://github.com/OlhaGr/ImpWeekMM.git"
 }
